# By default, Quarkus reads application.properties

--- a/super-heroes/rest-villains/src/main/resources/application.properties
+++ b/super-heroes/rest-villains/src/main/resources/application.properties
@@ -15,3 +15,6 @@ quarkus.log.console.darken=1
 
 ## HTTP configuration
 quarkus.http.port=8084
+
+# By default, Quarkus reads application.properties.
+level.multiplier=0.5
