--- a/super-heroes/rest-villains/src/main/resources/application.properties
+++ b/super-heroes/rest-villains/src/main/resources/application.properties
@@ -18,3 +18,6 @@ quarkus.http.port=8084
 
 # By default, Quarkus reads application.properties.
 level.multiplier=0.5
+
+# In the application.properties file, add: %test.level.multiplier=1 which set the multiplier to 1 when running the tests:
+%test.level.multiplier=1
