Quarkus comes with a CORS filter which intercepts all incoming HTTP requests. quarkus.http.cors=true

--- a/super-heroes/rest-villains/src/main/resources/application.properties
+++ b/super-heroes/rest-villains/src/main/resources/application.properties
@@ -21,3 +21,6 @@ level.multiplier=0.5
 
 # In the application.properties file, add: %test.level.multiplier=1 which set the multiplier to 1 when running the tests:
 %test.level.multiplier=1
+
+## Quarkus comes with a CORS filter which intercepts all incoming HTTP requests.
+quarkus.http.cors=true
