--- a/super-heroes/rest-fights/src/main/resources/application.properties
+++ b/super-heroes/rest-fights/src/main/resources/application.properties
@@ -22,3 +22,6 @@ quarkus.log.console.level=DEBUG
 
 %prod.quarkus.log.console.level=INFO
 %prod.quarkus.hibernate-orm.database.generation=update
+
+## Quarkus comes with a CORS filter which intercepts all incoming HTTP requests.
+quarkus.http.cors=true
