Updating the Test with Mock Support

--- a/super-heroes/rest-fights/src/main/resources/application.properties
+++ b/super-heroes/rest-fights/src/main/resources/application.properties
@@ -25,3 +25,9 @@ quarkus.log.console.level=DEBUG
 
 ## Quarkus comes with a CORS filter which intercepts all incoming HTTP requests.
 quarkus.http.cors=true
+
+## Rest client
+io.quarkus.workshop.superheroes.fight.client.HeroProxy/mp-rest/url=http://localhost:8083
+io.quarkus.workshop.superheroes.fight.client.HeroProxy/mp-rest/scope=javax.inject.Singleton
+io.quarkus.workshop.superheroes.fight.client.VillainProxy/mp-rest/url=http://localhost:8084
+io.quarkus.workshop.superheroes.fight.client.VillainProxy/mp-rest/scope=javax.inject.Singleton
