--- a/super-heroes/rest-villains/pom.xml
+++ b/super-heroes/rest-villains/pom.xml
@@ -67,6 +67,18 @@
       <artifactId>rest-assured</artifactId>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>org.eclipse.microprofile.health</groupId>
+          <artifactId>microprofile-health-api</artifactId>
+          <version>3.1</version>
+          <scope>compile</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.eclipse.microprofile.health</groupId>
+          <artifactId>microprofile-health-api</artifactId>
+          <version>3.1</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
   <build>
     <plugins>
